[gd_scene load_steps=6 format=3 uid="uid://fpgqksynhkmf"]

[ext_resource type="Script" uid="uid://5xiilchetq55" path="res://scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://b8mpjqtwj2xqb" path="res://assets/ship.png" id="1_l6cm7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(0.6, 0.6, 0.9882353, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ekxnf"]
texture = ExtResource("1_l6cm7")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(0.38438532, 0.49123877, 0.5912826, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l6cm7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 312.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ekxnf")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 592.0
offset_top = 222.0
offset_right = 1328.0
offset_bottom = 359.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.79400486, 0.37912697, 3.85046e-07, 1)
theme_override_font_sizes/font_size = 100
text = "Cannon Battles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.0
offset_top = -72.0
offset_right = 257.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="start_client" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.89177614, 0.87289596, 0.8621105, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Start client"

[node name="start_server" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.89177614, 0.87289596, 0.8621105, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Start server"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.89177614, 0.87289596, 0.8621105, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Options"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.89177614, 0.87289596, 0.8621105, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/start_client" to="." method="_on_start_client_pressed"]
[connection signal="pressed" from="VBoxContainer/start_server" to="." method="_on_start_server_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
